[project]
name = "claude-sessions-tui"
version = "0.1.1"
description = "Terminal UI for browsing Claude Code sessions from jsonl files"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yaroslav Lyzlov" }]
dependencies = [
    "textual>=0.80",
]

[project.urls]
Homepage = "https://github.com/lyzlov-twelve/claude-sessions-tui"

[project.scripts]
claude-sessions = "claude_sessions.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claude_sessions"]
